# carta-backend

./: .Frame.cc.kate-swp  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  AnimationObject.h  AnimationObject_8h.html  AnimationObject_8h.js  AnimationObject_8h__dep__incl.map  AnimationObject_8h__dep__incl.md5  AnimationObject_8h__incl.map  AnimationObject_8h__incl.md5  AnimationQueue.cc  AnimationQueue.h  App_8cc.html  App_8cc.js  App_8cc__incl.map  App_8cc__incl.md5  App_8cc_a41a3266785a8ac3360dd09466acc91c4_icgraph.map  App_8cc_a41a3266785a8ac3360dd09466acc91c4_icgraph.md5  App_8cc_ae7f5c27bbd73739e53d5ab0a59ec1110_icgraph.md5  App_8h.html  App_8h.js  App_8h__dep__incl.map  App_8h__dep__incl.md5  App_8h__incl.map  App_8h__incl.md5  App_8h_a88efa1f2f554a9f807784421cef88c32_icgraph.map  App_8h_a88efa1f2f554a9f807784421cef88c32_icgraph.md5  App_8h_ae7f5c27bbd73739e53d5ab0a59ec1110_icgraph.map  BasicStatsCalculator_8h.html  BasicStatsCalculator_8h__dep__incl.map  BasicStatsCalculator_8h__dep__incl.md5  BasicStatsCalculator_8h__incl.map  BasicStatsCalculator_8h__incl.md5  BasicStatsCalculator_8tcc.html  BasicStatsCalculator_8tcc__dep__incl.map  BasicStatsCalculator_8tcc__dep__incl.md5  (+4729 more)
.circleci/: config.yml
.github/: pull_request_template.md
Analysis/: CasacRegionManager.cc  CasacRegionManager.h  ImageMoments.h  ImageMoments.tcc  MomentCalcBase.h  MomentCalcBase.tcc  MomentClip.h  MomentClip.tcc  MomentFit.h  MomentFit.tcc  MomentWindow.h  MomentWindow.tcc  MomentsBase.h  MomentsBase.tcc  MyLatticeApply.h  MyLatticeApply.tcc  SubImageFactory.h  SubImageFactory.tcc
Catalog/: VOTableCarrier.cc  VOTableCarrier.h  VOTableController.cc  VOTableController.h  VOTableInterface.h  VOTableParser.cc  VOTableParser.h
DataStream/: Compression.cc  Compression.h  Contouring.cc  Contouring.h  Smoothing.cc  Smoothing.h  Tile.cc  Tile.h
Dockerfiles/: Dockerfile-AlmaLinux  Dockerfile-AlmaLinux8  Dockerfile-AlmaLinux9  Dockerfile-CentOS6  Dockerfile-CentOS7  Dockerfile-CentOS8  Dockerfile-minimal  Dockerfile-minimal-ubuntu-20.04  Dockerfile-ubuntu-16.04  Dockerfile-ubuntu-18.04  Dockerfile-ubuntu-20.04  Dockerfile-ubuntu-22.04
FileList/: FileExtInfoLoader.cc  FileExtInfoLoader.h  FileInfoLoader.cc  FileInfoLoader.h  FileListHandler.cc  FileListHandler.h  FitsHduList.cc  FitsHduList.h  FitsInfoLoader.h  GenericInfoLoader.h  Hdf5InfoLoader.h  PagedInfoLoader.h
GrpcServer/: CartaGrpcService.cc  CartaGrpcService.h
ImageData/: CartaHdf5Image.cc  CartaHdf5Image.h  CartaMiriadImage.cc  CartaMiriadImage.h  CasaLoader.h  CompListLoader.h  ConcatLoader.h  ConcatStokesFiles.cc  ConcatStokesFiles.h  ExprLoader.h  FITSLoader.h  FileLoader.cc  FileLoader.h  FitsLoader.h  GeneralLoader.h  HDF5Attributes.cc  HDF5Attributes.h  HDF5Image.cc  HDF5Image.h  HDF5Loader.h  Hdf5Attributes.cc  Hdf5Attributes.h  Hdf5Loader.cc  Hdf5Loader.h  Hdf5Loader.tcc  ImagePtrLoader.h  MIRIADLoader.h  MiriadLoader.h
ImageStats/: BasicStatsCalculator.h  (+5 more)
cartavis/: CMakeLists.txt  carta_service.proto
test/: BackendModel.cc  BackendModel.h  BackendTester.cc  BackendTester.h  CMakeLists.txt  CommonTestUtilities.cc  CommonTestUtilities.h  CommonTestUtilities.tcc  DummyBackend.cc  DummyBackend.h  Factories.cc  Factories.h  Makefile  MockFileLoader.h  MockMomentGenerator.h  MockTileCache.h  ProtobufInterface.cc  ProtobufInterface.h  ProtobufUtilities.cc  ProtobufUtilities.h  TestBlockSmooth.cc  TestBlockSmooth3D.cc  TestContour.cc  TestCubeImageCache.cc  TestCursorSpatialProfiles.cc  TestDataExporter.cc  TestExprImage.cc  TestFITS.cc  TestFileInfo.cc  TestFileList.cc  TestFitsImage.cc  TestFitsImage2.cc  TestFitsTable.cc  TestFrame.cc  TestHdf5Attributes.cc  TestHdf5Image.cc  TestHistogram.cc  TestICD.cc  TestIcd.cc  TestImageCaches.cc  (+34 more)
test-perf/: AxesTransformer.cc  AxesTransformer.h  CMakeLists.txt  InitTester.cc  InitTester.h  TestFitsSliceData.cc  TestFrame.cc  TestFrame.h  TestLoadingFile.cc  TestMoments.cc  TestRegion.cc  TestSliceData.cc
test/data/: settings-bad-fields.json  settings-good-fields.json
test/data/images/casa/noise_10px_10px.im/: table.f0  table.f0_TSM0
test/data/images/casa/noise_10px_10px.im/logtable/: table.f0
test/data/images/casa/noise_10px_10px.im/mask0/: table.f0  table.f0_TSM0
test/data/images/fits/: M17_SWex_unittest.fits  noise_10px_10px.fits  noise_3d.fits  noise_3d_degen.fits  noise_3d_degen_casa.fits  noise_4d.fits  noise_4d_casa.fits  small_perplanebeam.fits  spw25_mom0.fits
test/data/images/hdf5/: noise_10px_10px.hdf5
test/data/images/mix/: M17_SWex_unit.fits  M17_SWex_unit.hdf5
test/data/images/mix/M17_SWex_unit.image/: table.f0  table.f0_TSM0
test/data/images/mix/M17_SWex_unit.image/logtable/: table.f0
test/data/images/mix/M17_SWex_unit.image/mask0/: table.f0  table.f0_TSM0
test/data/images/mix/M17_SWex_unit.miriad/: header  history  image
test/data/profiles/: test-image-profiles.tsv
test/data/tables/fits/: array_types.fits  ivoa_example.fits
test/data/tables/xml/: array_types.xml  empty_data.xml  ivoa_example.xml  no_data.xml  no_resource.xml  no_table.xml
test/icd-test/: BackendModel.cc  ProtobufInterface.h  TestAccessCarta.cc  TestAnimatorDataStream.cc  TestAnimatorNavigation.cc  TestAnimatorPlayback.cc  TestIcdMain.cc  TestMomentsGenerator.cc  TestPerCubeHistogram.cc  TestRegionRegister.cc  TestRegionSpectralProfileRectangle.cc  TestRegionStatisticsEllipse.cc  TestRegionStatisticsPolygon.cc  TestRegionStatisticsRectangle.cc
test/icd_test/: BackendModel.cc  BackendModel.h  BackendTester.cc  BackendTester.h  DummyBackend.cc  DummyBackend.h  ProtobufInterface.cc  ProtobufInterface.h  TestAccessCarta.cc  TestAnimatorDataStream.cc  TestAnimatorNavigation.cc  TestAnimatorPlayback.cc  TestICD.cc  TestRegionRegister.cc  TestRegionSpectralProfileRectangle.cc  TestRegionStatisticsEllipse.cc  TestRegionStatisticsPolygon.cc  TestRegionStatisticsRectangle.cc
test/performance-test/: TestMomentsGenerator.cc  TestOpenFiles.cc  TestPerCubeHistogram.cc  TestPerformanceMain.cc  TestRegionSpectralProfile.cc  TestSpatialProfile.cc
(+558 files in other folders)
